tested real time chat using socket.io

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
+    "startapp": "nodemon server.js",
     "start:dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "test": "test"
@@ -27,6 +28,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "slugify": "^1.6.6",
+    "socket.io": "^4.7.3",
     "validator": "^13.11.0"
   },
   "devDependencies": {
