--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "startapp": "nodemon server.js",
     "start:dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "test": "test"
+    "test": "jest"
   },
   "author": "Ujjawal",
   "license": "ISC",
@@ -32,14 +31,17 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "eslint": "^8.49.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.6.3",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3"
   },
